# serene

./: CMakeLists.txt  README.md
include/: free_task.hpp  logger.hpp  relaxed_graph.hpp  relaxed_pool.hpp  serene.hpp  strict_pool.hpp  task_base.hpp  task_common.hpp  types.hpp
source/: relaxed_graph.cxx  relaxed_pool.cxx  strict_pool.cxx
tests/: CMakeLists.txt
tests/make_relaxed_graph/: CMakeLists.txt  main.cxx
